--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,13 @@
   color: white;
   font-size: 20px;
 }
+.head-box a{
+  text-decoration: none;
+  color: #FFFFFF;
+}
+a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
+}
 
 .left {
   width: 75%;
