--- a/style.css
+++ b/style.css
@@ -1,22 +1,37 @@
 .header {
   padding: 60px;
+  margin-bottom: 20px;
   text-align: center;
-  background: #F1DEDE;
   color: white;
   font-size: 30px;
   line-height: 0.5;
+}
+@media (min-width: 699px) {
+  .header {
+    background: #F1DEDE;
+  }
+}
+@media (max-width: 700px) {
+  .header {
+    background: #BBACC1;
+  }
 }
 
 .column {
   float: left;
   padding: 10px;
+  margin-top: 20px;
   color: white;
   font-size: 20px;
 }
 
-.left {
-  width: 75%;
-  background: #BBACC1;
+.head-box a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.btn {
+  margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
