--- a/style.scss
+++ b/style.scss
@@ -1,14 +1,21 @@
 .header {
   padding: 60px;
+  margin-bottom: 20px;
   text-align: center;
-  background: #F1DEDE;
   color: white;
   font-size: 30px;
-  line-height: 0.5
+  line-height: 0.5;
+  @media (min-width: 699px){
+      background: #F1DEDE;
+  }
+  @media (max-width: 700px){
+      background: #BBACC1;
+  }
 }
 .column {
   float: left;
   padding: 10px;
+  margin-top: 20px;
   color: white;
   font-size: 20px;
 }
@@ -16,11 +23,6 @@
   text-decoration: none;
   color: #FFFFFF;
 }
-a:hover, a:visited, a:link, a:active {
-    text-decoration: none;
-}
-
-.left {
-  width: 75%;
-  background: #BBACC1;
+.btn {
+  margin-bottom: 20px;
 }
