--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@
   }
 }
 
+p::first-letter {
+  font-style: italic;
+}
+
 .head-box a {
   text-decoration: none;
   color: #FFFFFF;
@@ -38,6 +42,10 @@
 
 ul {
   list-style-position: inside;
+}
+
+#welcome {
+  font-weight: 400;
 }
 
 /*# sourceMappingURL=style.css.map */
